--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,72 @@
+/* utiities */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.clearfix{
-    clear: both;
-    content: '';
-    display: table;
-}
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-}
 
 body{
     font-family: Whitney, Helvetica Neue, Helvetica,Arial, sans-serif;
 }
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: brown;
+    text-align: center;
+}
+.w-60{
+    width: 60%;
+}
+.w-20{
+    width: 20%;
+}
+.col{
+    float: left;
+}
+
+.clearfix::after{
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+
+.text-white{
+    color: white;
+}
+.text-black{
+    color: black;
+}
+
+.bgc-white{
+    background-color: white;
+}
+
+/* structure */
+/* header */
+header{
+    background-color: #3161e0;
+
+}
+.topbar{
+    height: 80px;
+    line-height: 80px;
+}
+
+ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 15px 0 15px;
+}
+
+.logo{
+    vertical-align: middle;
+}
+
+.btn-access{
+    padding: 10px 15px;
+    border-radius: 25px;
+    border: 2px;
+    text-decoration: none;
+}
