--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,14 @@ body{
     margin: 0 auto;
     text-align: center;
 }
+.w-80{
+    width: 80%;
+}
 .w-70{
     width: 70%;
+}
+.w-60{
+    width: 60%;
 }
 .w-40{
     width: 40%;
@@ -46,9 +52,19 @@ body{
     color: black;
 }
 
-.text-color-lessblack{
+.text-lessblack{
     color: #45484a;
+}
+.text-lessblue{
+    color: #7289da
+    ;
+}
+.text-align-left{
+    text-align: left;
+}
 
+.dec-none{
+    text-decoration: none;
 }
 
 .bgc-white{
@@ -62,8 +78,15 @@ body{
     background-color: lightblue ;
 }
 
+
 .f-size-50px{
     font-size: 50px;
+}
+.f-size-34px{
+    font-size: 34px;
+}
+.f-size-28px{
+    font-size: 28px;
 }
 .f-size-20px{
     font-size: 20px;
@@ -84,7 +107,6 @@ body{
     border: 2px;
     text-decoration: none;
     display: inline-block;
-    margin: 50px 10px 0 10px;
 }
 
 .uppercase{
@@ -99,7 +121,11 @@ body{
 /* header */
 header{
     background-color: #3161e0;
+    margin-bottom: 100px;
     
+}
+.btn-header{
+    margin: 50px 10px 0 10px
 }
 .topbar{
     height: 80px;
@@ -158,6 +184,7 @@ li:hover{
 }
 
 /* fine header - inizio main */
+/* sections */
 
 .section-one{
     height: 600px;
@@ -166,13 +193,10 @@ li:hover{
     text-align: left;
     margin-top: 30px;
 }
-section{
-    height: 600px;
-}
-
 
 .header-section{
     background-color: white;
+    margin-top: 0;
 }
 
 .big-img-title{
@@ -187,6 +211,24 @@ section{
     margin-bottom: 50px;
 }
 
-#footer-main{
-    height: 50px;
+.s-margin{
+    margin: 100px;
+}
+
+.footer-section-four{
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
+
+.btn-footer{
+    margin-top: 20px;
+}
+
+
+/* footer main */
+
+
+.content{
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
