--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,9 @@ body{
 .text-lessblack{
     color: #45484a;
 }
+.text-blue{
+    color: blue;
+}
 .text-lessblue{
     color: #7289da
     ;
@@ -231,4 +234,42 @@ li:hover{
 .content{
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+ul.vertical-menu li{
+    display: block;
+    margin-top: 10px;
+}
+.vertical-menu{
+    display: inline-block;
+    margin-left: 30px;
+    vertical-align: top;
+}
+
+ul.vertical-menu a{
+    text-decoration: none;
+}
+.vertical-menu .product,.content{
+    display: inline-block;
+}
+
+.border-light-blue{
+    border-top: 2px solid lightblue;
+}
+
+.content-footer{
+    margin-top: 30px;
+}
+
+.w-25{
+    float: right;
+}
+
+.btn-footer{
+    margin-top: 30px;
+}
+
+.btn-footer a:hover{
+    background-color: darkblue;
+    color: lightblue;
 }
